--- a/tripplanner/package.json
+++ b/tripplanner/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^12.23.25",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "react": "19.2.0",
