--- a/tripplanner/package.json
+++ b/tripplanner/package.json
@@ -25,6 +25,7 @@
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-leaflet": "^5.0.0",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0"
